# libtexty

./: .envrc  .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  Makefile  setup.py
scripts/: gen_chardet.py  gen_lang_enum.py  transform_profiles.py
src/: Language.cpp  Language.h  NGram.h  hashing.cpp  hashing.h  main.cpp  pretty_print.h  python_interface.cpp  shingle.cpp  shingle.h  util.h
src/cleaning/: basic.cpp
src/hashing/: SimHasher.h
src/html/: GumboVectorWrapper.cpp  GumboVectorWrapper.h  MetaTags.cpp  MetaTags.h  Node.cpp  Node.h
src/html/goose/: BaseContentExtractor.h  GooseContentExtractor.cpp  GooseContentExtractor.h  NodeScorer.h  StupidStopwordCounter.cpp  StupidStopwordCounter.h  TextCleaner.cpp  TextCleaner.h  TextNodeCollector.h  util.cpp
src/html/test/unit/: test_HtmlDomAndNode.cpp
src/language_detection/: DetectionRunner.cpp  DetectionRunner.h  LanguageDetector.cpp  LanguageDetector.h  LanguageProfile.cpp  LanguageProfile.h  LanguageProfiles.cpp  LanguageProfiles.h  profile_data.h
src/language_detection/test/functional/: test_language_detection.cpp
src/randomness/: RandomDistribution.h
src/search/: RabinFingerprinter.cpp  RabinFingerprinter.h  RabinSearcher.cpp  RabinSearcher.h  RollingRabinHash.h  Utf8RabinSearcher.cpp  Utf8RabinSearcher.h
src/search/test/unit/: test_RabinFingerprinter.cpp  test_Utf8RabinSearcher.cpp
src/stemming/: SbStemmerWrapper.cpp
src/string_views/: ByteStringWindow.cpp  ByteStringWindow.h  ConstByteStringIterator.h  NakedUtf8Iterator.cpp  NakedUtf8Iterator.h  NakedUtf8View.h  TokenView.cpp  TokenView.h  Utf8Iterator.cpp  Utf8Iterator.h  Utf8View.cpp  Utf8View.h
src/string_views/test/unit/: test_ByteStringWindow.cpp
src/testing/: run_tests.cpp
src/texty/: BloomFilter.h  ConstantSpaceSimHasher.h  HashFamily.h  ShingleView2.cpp  ShingleView2.h  SimHasher.h  TokenView.cpp  TokenView.h  Utf8View.cpp  Utf8View.h  python_interface.cpp  simple_interface.cpp  simple_interface.h  texty_util.cpp  texty_util.h
src/util/: RollingQueue.h  SmallVector.h  misc.h  pretty_print.h
util/: cpp_formatters.py
